--- a/src/style.scss
+++ b/src/style.scss
@@ -18,6 +18,7 @@ html {
 	width: 100%;
 	height: 100%;
 	display: grid;
+	line-height: 1.3;
 }
 
 html,
@@ -95,7 +96,7 @@ button {
 	transition: all 0.3s;
 
 	font-family: var(--display);
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 	font-weight: 700;
 
 	padding: 1rem 2rem;
